# ruleground

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: base.yaml
configs/model/: base.yaml  large.yaml  small.yaml
configs/sportr/: basketball.yaml  football.yaml  soccer.yaml
configs/training/: grpo.yaml  rsa.yaml  supervised.yaml
ruleground/: __init__.py
ruleground/cli/: eval.py  extract.py  main.py  train.py
ruleground/data/: collate.py  dataset.py  transforms.py
ruleground/data/preparation/: download_sportu.py  sportu_converter.py
ruleground/evaluation/: error_analysis.py  evaluator.py  metrics.py
ruleground/models/: __init__.py  encoder.py  logic.py  predicate_head.py  reasoning_head.py  rgm.py  ruleground.py  snapformer_head.py  temporal_pool.py
ruleground/predicates/: ontology.py  rules.py
ruleground/predicates/extraction/: extractor.py  prompts.py  validator.py
ruleground/training/: callbacks.py  grpo.py  losses.py  rewards.py  rsa.py  trainer.py
ruleground/utils/: checkpoint.py  config.py  distributed.py  logging.py
tests/: test_config.py  test_error_analysis.py  test_metrics.py
tests/data/: test_dataset.py
tests/e2e/: fixtures.py  test_full_pipeline.py  test_sportu_integration.py
tests/models/: test_logic.py  test_rgm.py
tests/predicates/: test_ontology.py
tests/training/: test_grpo.py  test_losses.py
