[project]
name = "ruleground"
version = "0.1.0"
description = "Rule-Grounded Representations for Multi-Sport Video Understanding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sree Krishna Vadde", email = "sree.vadde@gmail.com"}
]
requires-python = ">=3.10"
keywords = [
    "sports-video-understanding",
    "neuro-symbolic",
    "multimodal-learning",
    "rule-based-reasoning",
    "reinforcement-learning",
]

dependencies = [
    # Core ML
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "einops>=0.7.0",
    "timm>=0.9.12",

    # ActionFormer v2 (author's fork with RoPE/Flash Attention)
    "actionformer>=1.5.0",

    # Video processing
    "decord>=0.6.0",
    "av>=10.0.0",
    "opencv-python>=4.8.0",

    # Data & Config
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",

    # Training
    "accelerate>=0.25.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",

    # Evaluation
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
extraction = [
    "anthropic>=0.18.0",
    "openai>=1.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
ruleground = "ruleground.cli.main:app"
rg-train = "ruleground.cli.train:main"
rg-eval = "ruleground.cli.eval:main"
rg-extract = "ruleground.cli.extract:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ruleground*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ruleground"
